# market-data-pipeline

./: .gitignore  README.md  pyproject.toml
src/market_pipeline/: config_loader.py  ingest.py  schema.py  store.py  validate.py
src/market_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/market_pipeline/config/: default_config.yaml  schema.yaml
